begining to add grid to the bulk of the content section (need to adjust it so it fits evenly fr may be an issue) added 1 more icon to repository and to html, some basic styling has been added for visibility

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Main layout*/
 body {
   margin: 0;
   padding: 0;
@@ -10,11 +11,6 @@ body {
   color: white;
   grid-column: 1;
   grid-row: 1 / 3;
-}
-.contentCont {
-  background-color: rgb(155, 154, 154);
-  grid-column: 2;
-  grid-row: 2 / 3;
 }
 .userCont {
   padding: 10px;
@@ -40,7 +36,58 @@ body {
   grid-column: 2;
   grid-row: 2;
 }
+/*Content Layout*/
+.contentCont {
+  background-color: rgb(202, 202, 202);
+  grid-column: 2;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 5fr 1fr 5fr;
+}
+.cardTitle1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.projectCardsCont {
+  grid-row: 2 / 5;
+  grid-column: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+.projectCardsCont .card1 {
+  height: 200px;
+}
+.cardTitle2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+.annoucementsCont {
+  grid-row: 2;
+  grid-column: 2;
+}
+.cardTitle3 {
+  grid-row: 3;
+  grid-column: 2;
+}
+.trendingCont {
+  grid-row: 4;
+  grid-column: 2;
+}
 
+/*Specific decorations */
+.container {
+  background-color: white;
+  border-radius: 5px;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+.keyDashboardIcon {
+  height: 40px;
+  width: 40px;
+}
 .cardIcon {
   height: 20px;
   width: 20px;
